--- a/python_basics_001.ipynb
+++ b/python_basics_001.ipynb
@@ -12,8 +12,7 @@
     "    </span>\n",
     "</h1>\n",
     "<span style=\"float:right;font-size:medium\">\n",
-    "<tt>Code by : Jayadev Patil</tt>     \n",
-    "</span>"
+    "<tt>Code by : Jayadev Patil</tt></span>"
    ]
   },
   {
