--- a/python_basics_001.ipynb
+++ b/python_basics_001.ipynb
@@ -11,8 +11,7 @@
     "      [ notebook : 001 ] 🟡🔴\n",
     "    </span>\n",
     "</h1>\n",
-    "<span style=\"float:right;font-size:medium\">\n",
-    "<tt>Code by : Jayadev Patil</tt></span>"
+    "<span style=\"float:right;font-size:medium\"><tt>Code by : Jayadev Patil</tt></span>"
    ]
   },
   {
