--- a/python_basics_003.ipynb
+++ b/python_basics_003.ipynb
@@ -11,9 +11,7 @@
     "      [ notebook : 003 ] 🟡🔴\n",
     "    </span>\n",
     "</h1>\n",
-    "<span style=\"float:right;font-size:medium\">\n",
-    "<tt>Code by : Jayadev Patil</tt>     \n",
-    "</span>"
+    "<span style=\"float:right;font-size:medium\"><tt>Code by : Jayadev Patil</tt></span>"
    ]
   },
   {
