--- a/python_basics_004.ipynb
+++ b/python_basics_004.ipynb
@@ -23,7 +23,7 @@
     "This notebook covers <strong>Python Variables</strong>\n",
     "\n",
     "*Def :* Variables are used for storing data values, python doesn't have commands for declaring variable\n",
-    "* different datatypes : String, Int, Float, Bool\n",
+    "* different datatypes : String, Int, Float, Bool, Complex\n",
     "* print variables within a string\n",
     "* type conversions\n",
     "* global **vs** local\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ce98afd5",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,8 @@
     "name = 'Bablu'\n",
     "age = 15\n",
     "percentile = 62.5\n",
-    "passed = True"
+    "passed = True\n",
+    "hyp = 5 + 4j"
    ]
   },
   {
@@ -69,7 +70,8 @@
       "<class 'str'>\n",
       "<class 'int'>\n",
       "<class 'float'>\n",
-      "<class 'bool'>\n"
+      "<class 'bool'>\n",
+      "<class 'complex'>\n"
      ]
     }
    ],
@@ -77,7 +79,8 @@
     "print(type(name))\n",
     "print(type(age))\n",
     "print(type(percentile))\n",
-    "print(type(passed))"
+    "print(type(passed))\n",
+    "print(type(hyp))"
    ]
   },
   {
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6000eb0d",
    "metadata": {},
    "outputs": [
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "cdd5af28",
    "metadata": {},
    "outputs": [
@@ -271,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "a9dbe791",
    "metadata": {},
    "outputs": [
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "a8730875",
    "metadata": {},
    "outputs": [
