--- a/python_basics_001.ipynb
+++ b/python_basics_001.ipynb
@@ -19,7 +19,7 @@
    "id": "a50c4642",
    "metadata": {},
    "source": [
-    "### <u><strong>Python Basics</strong></u>\n",
+    "### <u><strong>Python Basics</strong></u><span style=\"float:right;font-size:medium\"><a href='https://github.com/jayadevnpatil/Python_Whole.git'>github</a></span>\n",
     "This notebook covers <tt><strong>print()</strong></tt>\n",
     "* print signle line\n",
     "* print multiple lines\n",
@@ -27,7 +27,7 @@
     "\n",
     "<strong style=\"text-align:left;color:green\">Note : This code can be copied and reproduced for educational purposes.</strong> \n",
     "\n",
-    "-------------------------------------------------------------------------------------------------------------------\n",
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 1.1    print single line"
    ]
   },
@@ -78,7 +78,7 @@
      "evalue": "EOL while scanning string literal (3721198893.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_27764/3721198893.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"Hello World')\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_7797/3721198893.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"Hello World')\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
@@ -92,6 +92,7 @@
    "id": "a3a30ff7",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 1.2    print multiple lines"
    ]
   },
@@ -184,6 +185,7 @@
    "id": "01022ea1",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 1.3 use of  '<tt><strong>end = </strong></tt>'"
    ]
   },
