--- a/python_basics_002.ipynb
+++ b/python_basics_002.ipynb
@@ -19,14 +19,14 @@
    "id": "ca009f68",
    "metadata": {},
    "source": [
-    "### <u><strong>Python Basics</strong></u>\n",
+    "### <u><strong>Python Basics</strong></u><span style=\"float:right;font-size:medium\"><a href='https://github.com/jayadevnpatil/Python_Whole.git'>github</a></span>\n",
     "This notebook covers <strong>comments</strong>\n",
     "* single line comments\n",
     "* multi line comments\n",
     "\n",
     "<strong style=\"text-align:left;color:green\">Note : This code can be copied and reproduced for educational purposes.</strong> \n",
     "\n",
-    "-------------------------------------------------------------------------------------------------------------------\n",
+    "------------------------------------------------------------------------------------------------------------------\n",
     "\n",
     "### 2.1 Single line Comment"
    ]
@@ -55,6 +55,7 @@
    "id": "e4a7298d",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 2.2 Multi line comments"
    ]
   },
