--- a/python_basics_003.ipynb
+++ b/python_basics_003.ipynb
@@ -19,7 +19,7 @@
    "id": "3b10fe75",
    "metadata": {},
    "source": [
-    "### <u><strong>Python Basics</strong></u>\n",
+    "### <u><strong>Python Basics</strong></u><span style=\"float:right;font-size:medium\"><a href='https://github.com/jayadevnpatil/Python_Whole.git'>github</a></span>\n",
     "This notebook covers <strong>Escape sequences</strong>\n",
     "* Escape Sequences\n",
     "\n",
@@ -74,6 +74,7 @@
    "id": "2f7127e0",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 3.1 But\n",
     "\n",
     "It could be solved using <strong>Escape sequences.</strong><br>\n",
