--- a/python_basics_004.ipynb
+++ b/python_basics_004.ipynb
@@ -19,7 +19,7 @@
    "id": "8215e36c",
    "metadata": {},
    "source": [
-    "### <u><strong>Python Basics</strong></u>\n",
+    "### <u><strong>Python Basics</strong></u><span style=\"float:right;font-size:medium\"><a href='https://github.com/jayadevnpatil/Python_Whole.git'>github</a></span>\n",
     "This notebook covers <strong>Python Variables</strong>\n",
     "\n",
     "*Def :* Variables are used for storing data values, python doesn't have commands for declaring variable\n",
@@ -88,6 +88,7 @@
    "id": "4ab141dc",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 4.2 Print variables inside a string\n",
     "\n",
     "The <strong>%</strong> followed by <strong>literals</strong> are used to access the specific data type within a print statement.\n",
@@ -136,6 +137,7 @@
    "id": "652bb381",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### Some More \n",
     "Char_seq | Datatype\n",
     "-----------|----------\n",
@@ -178,6 +180,7 @@
    "id": "7bd8fa5c",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### Task\n",
     "\n",
     "*Take the* <strong><tt>input()</tt></strong> from the user and multiply it by <strong>10</strong> to get 80."
@@ -264,6 +267,7 @@
    "id": "cad92219",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 4.4 global vs local \n",
     "\n",
     "* **global** variable has the scope over entire main body, can be accessed anywhere\n",
@@ -304,6 +308,7 @@
    "id": "89fefc52",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 4.5 ord() & chr()\n",
     "* **chr( )** is used to convert ASCII to its alphabet.\n",
     "* **ord( )** is used to convert alphabet to ASCII"
