--- a/python_basics_005.ipynb
+++ b/python_basics_005.ipynb
@@ -19,7 +19,7 @@
    "id": "820fb1d0",
    "metadata": {},
    "source": [
-    "### <u><strong>Python Basics</strong></u>\n",
+    "### <u><strong>Python Basics</strong></u><span style=\"float:right;font-size:medium\"><a href='https://github.com/jayadevnpatil/Python_Whole.git'>github</a></span>\n",
     "This notebook covers <strong>Precision & Field Width</strong>\n",
     "* floating point representation using **% operator** method.\n",
     "* floating point representation using **.format()** method.\n",
@@ -59,6 +59,7 @@
    "id": "f28e2170",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 5.2 Using <tt>.format()</tt> method"
    ]
   },
@@ -85,6 +86,7 @@
    "id": "982e287f",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 5.3 Using f-string method"
    ]
   },
@@ -111,7 +113,8 @@
    "id": "9fc984e3",
    "metadata": {},
    "source": [
-    "### 5.3 Precision and Field Width\n",
+    "------------------------------------------------------------------------------------------------------------------\n",
+    "### 5.4 Precision and Field Width\n",
     "<strong><tt>x.yf</tt></strong> form.\n",
     "* **x** denotes **<tt>minimum width/ padding</tt>** of the output string.\n",
     "* **y** denote minimum number of character after decimal point (default = 6).\n",
