--- a/python_basics_006.ipynb
+++ b/python_basics_006.ipynb
@@ -19,7 +19,7 @@
    "id": "4bac142b",
    "metadata": {},
    "source": [
-    "### <u><strong>Python Basics</strong></u>\n",
+    "### <u><strong>Python Basics</strong></u><span style=\"float:right;font-size:medium\"><a href='https://github.com/jayadevnpatil/Python_Whole.git'>github</a></span>\n",
     "This notebook covers <strong>Operators</strong>\n",
     "\n",
     "* Arithmetic Operators\n",
@@ -82,6 +82,7 @@
    "id": "c00e6326",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 6.2 Bitwise Operators\n",
     "\n",
     "| Symbol | Task Performed |\n",
@@ -191,6 +192,7 @@
    "id": "0326cb8d",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 6.3 Comparision Operator\n",
     "\n",
     "Operator  | Description\n",
@@ -240,6 +242,7 @@
    "id": "4c4d5a2e",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 6.4 Identity Operator\n",
     "\n",
     "Operator  | Description\n",
@@ -276,6 +279,7 @@
    "id": "ba0715c7",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 6.5 Logical Operator\n",
     "\n",
     "Operator  | Description\n",
@@ -321,6 +325,7 @@
    "id": "a2e41172",
    "metadata": {},
    "source": [
+    "------------------------------------------------------------------------------------------------------------------\n",
     "### 6.6 Membership Operator\n",
     "\n",
     "Operator  | Description\n",
